# employees-python-cicd

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  README.md  constraints.txt  employees.http  mkdocs.yaml  pyproject.toml
.github/workflows/: build.yaml  release.yaml
docs/: index.md  install.md
employees/: docker-compose.yaml
src/employees/: __init__.py  repo.py  restcontrollers.py  webcontrollers.py
src/employees/templates/: _formhelpers.html  employees.html
test/e2e/: test_employees_api.py  test_employees_ui.py
test/integration/: test_employees.py
test/unit/: test_restcontrollers.py
