# pyproject.toml

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "employees"
version = "1.0.0"
dependencies = [
    "Flask",
    "psycopg[binary,pool]",
    "Flask-WTF",
    "gunicorn"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "requests",
    "selenium",
    "webdriver-manager",
    "ruff",
    "pre-commit",
    "pdoc",
    "mkdocs",
    "mkdocs_puml"
]
